# plans

./: .gitignore  README.md
.github/workflows/: deploy.yml
index/: book.toml
index/src/: SUMMARY.md  index.md
rocksdb/: book.toml  giscus.js
rocksdb/spike/: README.md  analyze_marginal_cost.py  analyze_ops.py  coin_store.py  enrich_results.py  extract.py  pyproject.toml  replay.py  test_coin_store.py
rocksdb/spike/coin_store_spike.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rocksdb/spike/plots/: rocks-lean.csv  rocks-lean_enriched.csv  rocks.csv  rocks_enriched.csv  sqlite-consensus.csv  sqlite-consensus_enriched.csv  sqlite-full.csv  sqlite-full_enriched.csv
rocksdb/spike/plots/full/: contention-notes.md  enrichment-full.txt  rocks-batch100.csv  rocks-lean-batch100.csv  rocks-lean.csv  rocks-lean_enriched.csv  rocks-sequential.csv  rocks.csv  rocks_enriched.csv  sqlite-consensus.csv  sqlite-consensus_enriched.csv
rocksdb/src/: SUMMARY.md  bench-host.md  benchmarks.md  decisions.md  invariants.md  pathway.md  problem.md  status.md  target.md
theme/: giscus.html  giscus.js
